--- a/homework3/main.css
+++ b/homework3/main.css
@@ -96,11 +96,13 @@ option{
   	margin-right: 20px;
   	border-radius: 3px;
 }
+.art1:nth-child(5){
+	margin-bottom: 0px;
+}
 .paragraph{
 	font-size: 30px;
 	color: #df4a2b;
 	margin-bottom: 27px;
-	margin-left: 31px;
 	font-family: Roboto-Thin;
 	font-weight: bold;
 }
@@ -263,10 +265,21 @@ option{
 	font-weight: bold;
 	padding: 11px 348px 0px 15px;
 }
+.arrow{
+	width: 42px;
+    height: 42px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background-color: #cd2e2d;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin-left: 1522px;
+    border: none;
+}
 .footer{
 	display: flex;
 	border-top: 4px solid #bf1e2e;
-	margin-top: 12px;
 	height: 150px;
 }
 .unordered3{
