--- a/homework3/main.css
+++ b/homework3/main.css
@@ -49,6 +49,12 @@ li{
 }
 .theatre{
 	position: absolute;
+	background-image: url(images/img1.jpg);
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 739px;
+	width: 1929px;
 }
 .slider-button{
 	display: flex;
@@ -59,27 +65,34 @@ li{
  	margin-top: 597px;
 }
 .slider-arrow{
+	display: flex;
 	width: 36px;
   	height: 36px;
  	border-radius: 3px;
  	box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.4);
- 	background-size: contain;
-    background-position: center;
-  	background-repeat: no-repeat;
   	border: none;
-  	margin-top: 29px;
+  	margin: 29px 4px 0px 4px;
+  	background-color: #4E4E4E;
+}
+.slider-arrow:hover{
+	background-color: #E54A2B;
 }
 .slider-arrow1{
-  	background-image: linear-gradient(to top, #dd492a, #e54b2b);
-  	margin-right: 4px;
+	width: 9px;
+	height: 19px;
+  	background-image: url(icon/arrow-left.png);
+  	margin-left: 5px;
 }
 .slider-arrow2{
-  	background-image: linear-gradient(to top, #4c4c4c, #505050);
-  	margin-left: 4px;
+	width: 9px;
+	height: 19px;
+  	background-image: url(icon/arrow-right.png);
+  	margin-left: 7px;
 }
 .ticket{
 	width: 92px;
  	height: 93px;
+ 	background-image: url(icon/ticket.png);
   	background-size: cover;
   	background-position: center;
   	background-repeat: no-repeat;
@@ -87,18 +100,21 @@ li{
   	background-color: transparent;
   	padding: 0px;
 }
-.nav1{
+.orange-ticket{
+	background-image: url(icon/orange-ticket.png);
+}
+.header-nav{
 	display: flex;
 	height: 76px;
 	align-items: center;
 	margin-left: 53px;
 }
-.unordered1{ 
+.header-nav-ul{ 
 	padding: 0px;
 	display: flex;
 	width: 630px;
 }
-.a1{
+.header-nav-a{
 	text-decoration: none;
 	font-size: 12px;
 	text-transform: uppercase;
@@ -108,7 +124,7 @@ li{
 	padding-top: 34px;
 	padding-bottom: 30px;
 }
-.a1:hover{
+.header-nav-a:hover{
 	background-color: #ffffff;
 	color:  #272b2c;
 }
@@ -126,7 +142,7 @@ li{
 option{
 	color: black;
 }
-.art1{
+.main-article{
 	width: 482px;
   	height: 360px;
   	box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.2);
@@ -135,17 +151,17 @@ option{
   	margin-right: 20px;
   	border-radius: 3px;
 }
-.art1:nth-child(5){
+.main-article:nth-child(5){
 	margin-bottom: 0px;
 }
-.paragraph{
+.main-p{
 	font-size: 30px;
 	color: #df4a2b;
 	margin-bottom: 27px;
 	font-family: Roboto-Thin;
 	font-weight: bold;
 }
-.paragraph1{
+.article-p{
 	font-size: 14px;
   	font-weight: 300;
   	font-family: Roboto-Light;
@@ -184,21 +200,20 @@ option{
 	background-size: contain;
 	background-repeat: no-repeat;
 }
-.aside1{
+.wrapper-aside{
 	width: 220px;
 	height: 170px;
 	margin-top: 8px;
 }
-.aside2{
+.aside{
 	width: 233px;
 	height: auto;
 }
-.list2{
+.wrapper-aside-li{
 	font-size: 18px;
-	list-style: none;
 	line-height: 38px;
 }
-.a2{
+.wrapper-aside-li-a{
 	text-decoration: none;
 	color: #363a3b;
 	font-family: Roboto-Thin;
@@ -206,14 +221,14 @@ option{
 	line-height: 38px;
 	letter-spacing:1px;
 }
-.a2:hover{
+.wrapper-aside-li-a:hover{
 	color: #df4a2b;
 }
-.list2{
+.wrapper-aside-li{
 	position: relative;
 	list-style: none;
 }
-.list2:nth-child(1)::before{
+.wrapper-aside-li-1::before{
 	content: " ";
 	position: absolute;
 	width: 30px;
@@ -225,7 +240,7 @@ option{
 	background-position: center;
 	background-size: contain;
 }
-.list2:nth-child(2)::before{
+.wrapper-aside-li-2::before{
 	content: " ";
 	position: absolute;
 	width: 26px;
@@ -236,7 +251,7 @@ option{
 	background-repeat: no-repeat;
 	background-size: contain;
 }
-.list2:nth-child(3)::before{
+.wrapper-aside-li-3::before{
 	content: " ";
 	position: absolute;
 	width: 23px;
@@ -247,7 +262,7 @@ option{
 	background-repeat: no-repeat;
 	background-size: contain;
 }
-.list2:nth-child(4)::before{
+.wrapper-aside-li-4::before{
 	content: " ";
 	position: absolute;
 	width: 30px;
@@ -259,7 +274,7 @@ option{
 	background-position: center;
 	background-size: contain;
 }
-.list2:nth-child(5)::before{
+.wrapper-aside-li-5::before{
 	content: " ";
 	position: absolute;
 	width: 25px;
@@ -271,20 +286,20 @@ option{
 	background-position: center;
 	background-size: contain;
 }
-.aside2-1{
+.aside-div-first{
 	width: 233px;
 	height: 213px;
 	border-radius: 4px;
 	box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.3);
 	margin-bottom: 38px;
 }
-.aside2-2{
+.aside-div-second{
 	width: 233px;
     height: 213px;
     border-radius: 4px;
 	box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.3);
 }
-.paragraph3{
+.aside-p{
 	font-size: 30px;
 	color: #df4a2b;
 	margin-bottom: 27px;
@@ -299,7 +314,7 @@ option{
 	color: #484c4d;
 	font-weight: 800;
 }
-.heading3{
+.article-h3{
 	font-family: Roboto-Thin;
 	font-weight: bold;
 	padding: 11px 348px 0px 15px;
@@ -321,14 +336,14 @@ option{
 	border-top: 4px solid #bf1e2e;
 	height: 150px;
 }
-.unordered3{
+.footer-ul-first{
 	padding: 0px;
 	display: flex;
 	margin: 18px 205px 117px 487px; 
 	justify-content: space-between; 
 	width: 685px;
 }
-.a3{
+.footer-li-a-first{
 	text-decoration: none;
 	font-family: Roboto-Light;
 	font-size: 12px;
@@ -336,10 +351,10 @@ option{
   	color: #898989;
   	text-transform: uppercase;
 }
-.a3:hover{
+.footer-li-a-first:hover{
 	color:#cd2e2d;
 }
-.unordered4{
+.footer-ul-second{
 	display: flex;
 	width: 115px;
 	justify-content: space-between;
@@ -350,17 +365,17 @@ option{
 	background-repeat: no-repeat;
 	margin: 3px;
 }
-.list4{
+.footer-li-second{
 	width: 20px;
   	height: 20px;
   	opacity: 0.4;
   	border-radius: 4px;
   	background-color: #484c4d;
 }
-.list4:hover{
+.footer-li-second:hover{
 	background-color: #CD2D2D;
 }
-.a4{
+.footer-li-a-second{
 	text-decoration: none;
 }
 .facebook{
