--- a/homework5/main.css
+++ b/homework5/main.css
@@ -1,6 +1,8 @@
 html, body{
 	padding: 0px;
 	margin: 0px;
+	width: 100%;
+	min-width: 100%;
 }
 @font-face{
 	font-family: Lato-Regular;
@@ -62,7 +64,6 @@ li{
 	margin-top: 215px;
 }
 .messages-h1{
-	width: 438px;
   	height: 57px;
 	font-family: Lato-Black;
  	font-size: 60px;
@@ -98,24 +99,21 @@ li{
 	margin-right: 125px;
 	margin-top: 215px;
 }
-
-
 @media(max-width: 768px){
 	.body{
 		overflow-x: hidden;
-		max-width: 100%;
+		width: 100%;
+		min-width: 100%;
 	}
-	
 	.messages_block{
 		max-width: 100%;
-		height: 900px;
+		height: auto;
 		margin: 0 auto;
-		margin-top: 30px;
-		
+		margin-top: 30px;	
 	}
 	.messages_block2{
 		max-width: 100%;
-		height: 900px;
+		height: auto;
 		margin: 0 auto;
 		margin-top: 30px;
 	}
@@ -137,5 +135,4 @@ li{
 	.messages-div{
 		margin: 0 auto;
 	}
-
 }
