--- a/homework5/main.css
+++ b/homework5/main.css
@@ -99,23 +99,71 @@ li{
 	margin-right: 125px;
 	margin-top: 215px;
 }
+.download{
+	width: 100%;
+	height: 698px;
+}
+.download_block{
+	display: flex;
+	width: 1200px;
+	height: 698px;
+	justify-content: space-between;
+	margin: 0 auto;
+}
+.download-app{
+	width: 100%;
+	height: 698px;
+	border-top: 1px solid #e0e0e0; 
+}
+.download-div{
+	width: 796px;
+	height: 698px;
+	margin: 0 auto;
+}
+.your-app{
+	margin-left: 288px;
+	margin-top: 102px;
+	background-size: contain;
+	background-position: center;
+}
+.download-the-app{
+	width: 530px;
+  	height: 55px;
+ 	font-family: Lato-Black;
+ 	font-size: 60px;
+  	font-weight: 900;
+  	margin: 0 auto;
+  	color: #363636;
+}
+.dot{
+	background: linear-gradient(to top, #eb402c, #d90647), linear-gradient(to bottom, #363636, #363636);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+.download-app-p{
+	width: 805px;
+	font-size: 18px;
+	font-family: Lato-Regular;
+	color: #808080;
+	margin: 39px 0px 59px 0px;
+}
+.app-store{
+	margin-left: 306px;
+}
 @media(max-width: 768px){
-	.body{
-		overflow-x: hidden;
-		width: 100%;
-		min-width: 100%;
-	}
 	.messages_block{
-		max-width: 100%;
-		height: auto;
-		margin: 0 auto;
-		margin-top: 30px;	
-	}
-	.messages_block2{
-		max-width: 100%;
+		width: 100%;
 		height: auto;
 		margin: 0 auto;
 		margin-top: 30px;
+		margin-left: 120px;	
+	}
+	.messages_block2{
+		width: 100%;
+		height: auto;
+		margin: 0 auto;
+		margin-top: 30px;
+		margin-left: 100px;
 	}
 	.block{
 		display: flex;
@@ -125,14 +173,29 @@ li{
 		margin: 0 auto;
 	}
 	.easy-messaging{
-		margin: 0 auto;
+		margin:0 auto;
 		text-align: center;
 	}
 	.keep-in-touch{
-		margin: 0 auto;
+		margin:0 auto;
 		text-align: center;
 	}
 	.messages-div{
 		margin: 0 auto;
+	}
+	.download_block{
+		width: 100%;
+		height: auto;
+		margin: 0 auto;
+		margin-top: 300px;
+		margin-left: 10px;
+	}
+	.download-app-p{
+		width: 450px;
+		height: 58px;
+		margin: 0 auto;
+		text-align: center;
+		padding-top: 30px;
+
 	}
 }
