--- a/homework4/main.css
+++ b/homework4/main.css
@@ -126,16 +126,17 @@ li{
   	background-position: center;
   	margin-top: 115px;
 }
+.block{
+	margin: 0 auto;
+}
 .messages{
-	width: 100%;
+	max-width: 100%;
 	height: 1500px;
 }
-.messages-block{
+.messages_block{
 	display: flex;
-	width: 1369px;
+	width: 1200px;
 	height: 618px;
-	margin: 0 auto;
-	margin-top: 40px;
 }
 .messages-div{
 	width: 588px;
@@ -156,11 +157,10 @@ li{
 .easy-messaging{
 	width: 557px;
 	height: 209px;
-	margin-left: 78px;
+	margin-left: 50px;
 	margin-top: 215px;
 }
 .messages-h1{
-	width: 438px;
   	height: 57px;
 	font-family: Lato-Black;
  	font-size: 60px;
@@ -173,10 +173,10 @@ li{
 	color: #808080;
 	line-height: 1.6;
 }
-.messages-block2{
+.messages_block2{
 	display: flex;
 	flex-direction: row-reverse;
-	width: 1369px;
+	width: 1200px;
 	height: 618px;
 	margin: 0 auto;
 	margin-top: 40px;
@@ -479,6 +479,17 @@ li{
   	border: none;
   	position: absolute;
 }
+.download{
+	width: 100%;
+	height: 698px;
+}
+.download_block{
+	display: flex;
+	width: 1200px;
+	height: 698px;
+	justify-content: space-between;
+	margin: 0 auto;
+}
 .download-app{
 	width: 100%;
 	height: 698px;
@@ -501,7 +512,7 @@ li{
  	font-family: Lato-Black;
  	font-size: 60px;
   	font-weight: 900;
-  	margin-left: 125px;
+  	margin: 0 auto;
   	color: #363636;
 }
 .dot{
