--- a/homework5/main.css
+++ b/homework5/main.css
@@ -99,6 +99,64 @@ li{
 	margin-right: 125px;
 	margin-top: 215px;
 }
+.subscribe{
+	width: 100%;
+	height: 608px;
+}
+.subscribe-div{
+	width: 1200px;
+	height: 608px;
+}
+.subscribe-h1{
+	width: 780px;
+  	height: 47px;
+  	margin: 0 auto;
+	font-family: Lato-Black;
+ 	font-size: 60px;
+  	font-weight: 900;
+  	color: #363636;
+  	margin-top: 227px;
+  	
+}
+.subscribe-p{
+	width: 920px;
+	font-size: 18px;
+	font-family: Lato-Regular;
+	color: #808080;
+	margin: 0 auto;
+	margin-bottom: 70px;
+	margin-top: 60px;
+}
+.subscribe-block{
+	width: 571px;
+	height: 50px;
+	margin-left:155px;
+	margin: 0 auto;
+}
+.subscribe-button{
+	width: 180px;
+    height: 50px;
+    border-radius: 25px;
+    box-shadow: 0px 10px 30px 0 rgba(223, 27, 61, 0.3);
+    background-image: linear-gradient(to top, #eb402c, #d90647);
+    border: none;
+    color: #ffffff;
+    font-size: 18px;
+    font-family: Lato-Bold; 
+    margin-left: 391px;
+    position: absolute;
+}
+.subscribe-input{
+	width: 571px;
+  	height: 50px;
+ 	border-radius: 25px;
+  	background-color: #f8f8f8;
+  	color: #808080;
+  	font-family: Lato-Regular;
+  	font-size: 18px;
+  	border: none;
+  	position: absolute;
+}
 .download{
 	width: 100%;
 	height: 698px;
@@ -152,22 +210,47 @@ li{
 }
 @media(max-width: 768px){
 	.messages_block{
-		max-width: 100%;
+		max-width: 900px;
 		height: auto;
 		margin: 0 auto;
 		margin-top: 30px;
-		margin-left: 120px;	
 	}
 	.messages_block2{
-		max-width: 100%;
+		max-width: 900px;
 		height: auto;
 		margin: 0 auto;
 		margin-top: 30px;
-		margin-left: 100px;
 	}
 	.block{
 		display: flex;
 		flex-direction: column;
+	}
+	.subscribe-div{
+		max-width: 900px;
+		margin: 0 auto;
+		margin-top: 365px;
+	}
+	.subscribe-h1{
+		width: 500px;
+		height: 118px;
+		text-align: center;
+	}
+	.subscribe-p{
+		width: 500px;
+		text-align: center;
+	}
+	.subscribe-form{
+		width: 400px;
+		margin: 0 auto;
+	}
+	.subscribe-block{
+		width: 400px;
+	}
+	.subscribe-input{
+		width: 450px;
+	}
+	.subscribe-button{
+		width: 100px;
 	}
 	.messages-h1{
 		margin: 0 auto;
@@ -184,11 +267,9 @@ li{
 		margin: 0 auto;
 	}
 	.download_block{
-		max-width: 100%;
+		max-width: 900px;
 		height: auto;
 		margin: 0 auto;
-		margin-top: 300px;
-		margin-left: 10px;
 	}
 	.download-app-p{
 		width: 450px;
