--- a/homework5/main.css
+++ b/homework5/main.css
@@ -33,7 +33,6 @@ li{
 }
 
 .messages{
-	max-width: 100%;
 	height: 1500px;
 }
 .messages_block{
@@ -100,7 +99,6 @@ li{
 	margin-top: 215px;
 }
 .subscribe{
-	width: 100%;
 	height: 608px;
 }
 .subscribe-div{
@@ -158,7 +156,6 @@ li{
   	position: absolute;
 }
 .download{
-	width: 100%;
 	height: 698px;
 }
 .download_block{
@@ -209,6 +206,9 @@ li{
 	margin-left: 306px;
 }
 @media(max-width: 768px){
+	.messages{
+		width: 900px;
+	}
 	.messages_block{
 		max-width: 900px;
 		height: auto;
@@ -224,6 +224,9 @@ li{
 	.block{
 		display: flex;
 		flex-direction: column;
+	}
+	.subscribe{
+		width: 900px;
 	}
 	.subscribe-div{
 		max-width: 900px;
@@ -265,6 +268,9 @@ li{
 	}
 	.messages-div{
 		margin: 0 auto;
+	}
+	.download{
+		width: 900px;
 	}
 	.download_block{
 		max-width: 900px;
