--- a/homework5/main.css
+++ b/homework5/main.css
@@ -206,84 +206,150 @@ li{
 }
 @media(max-width: 768px){
 	html{
-		width: 900px;
+		max-width: 100%;
 	}
 	body{
-		width: 900px;
+		max-width: 100%;
 	}
 	.messages{
-		width: 900px;
+		width: 100%;
 		height: auto;
 	}
 	.messages_block{
-		max-width: 900px;
-		height: auto;
 		margin-top: 30px;
+		max-width: 100%;
+		height: 900px;
+		margin: 0 auto;
 	}
 	.messages_block2{
-		max-width: 900px;
-		height: auto;
-		margin-top: 30px;
+		max-width: 100%;
+		height: 900px;
+		margin: 0 auto;
 	}
 	.block{
 		display: flex;
 		flex-direction: column;
 	}
-	.subscribe{
-		width: 900px;
+	.messages-img4{
+		display: none;
 	}
-	.subscribe-div{
-		max-width: 900px;
+	.messages-img2{
+		display: none;
 	}
-	.subscribe-h1{
-		width: 500px;
-		height: 118px;
-		text-align: center;
-	}
-	.subscribe-p{
-		width: 500px;
-		text-align: center;
-	}
-	.subscribe-form{
-		width: 400px;
+	.messages-img{
+		max-width: 100%;
 		margin: 0 auto;
-	}
-	.subscribe-block{
-		width: 400px;
-	}
-	.subscribe-input{
-		width: 450px;
-	}
-	.subscribe-button{
-		width: 100px;
-	}
-	.messages-h1{
-		margin: 0 auto;
-	}
-	.easy-messaging{
-		margin:0 auto;
-		text-align: center;
-	}
-	.keep-in-touch{
-		margin:0 auto;
-		text-align: center;
+		align-content: center;
+		justify-content: center;
 	}
 	.messages-div{
+		width: 100%;
+		margin: 0 auto;
+		height: 570px;
+		display: flex;
+		align-items: center;
+		align-content: center;
+		justify-content: center;
+	}
+	.keep-in-touch{
+		max-width: 100%;;
+		margin: 0 auto;
+		height: auto;
+		text-align: center;
+		padding: 0;
+	}
+	.easy-messaging{
+		max-width: 100%;
 		margin: 0 auto;
 	}
-	.download{
-		width: 900px;
+	.responsive{
+		max-width: 100%;
+		margin: 0 auto;
+		padding: 0;
+		height: auto;
+		text-align: center;
 	}
-	.download_block{
-		max-width: 900px;
+	.subscribe{
+		max-width: 100%;
 		height: auto;
 	}
-	.download-app-p{
-		width: 450px;
-		height: 58px;
+	.subscribe-form{
+		width: 300px;
+		display: flex;
+		flex-direction: column;
+		height: auto;
+		flex-direction: column;
+		height: auto;
+		align-items: center;
+		align-content: center;
+		justify-content: center;
+	}
+	.subscribe-div{
+		max-width: 100%;
+		height: 500px;
 		margin: 0 auto;
-		text-align: center;
-		padding-top: 30px;
+		box-sizing: border-box;
+	}
+	.subscribe-block{
+		width: 300px;
+		display: flex;
+		flex-direction: column;
+		height: auto;
+		align-items: center;
+		align-content: center;
+		justify-content: center;
+		padding-top: 10px;
+		margin-left: -20px;
 
 	}
+	.subscribe-input{
+		max-width: 200px;
+		margin-top: 25px;
+		height:50px;
+		position: absolute;
+	}
+	.subscribe-button{
+		max-width: 100%;
+		position: absolute;
+		padding: 0;
+		height:50px;
+		margin-left: 65px;
+
+	}
+	.subscribe-p{
+		padding-top: 30px;
+		line-height: 1.3;
+	}
+	.download{
+		width: 100%;
+		height: auto;
+		margin-top: -150px;
+	}
+	.download_block{
+		max-width: 100%;
+		margin: 0 auto;
+	}
+	.your-app{
+		margin: 0 auto;
+	}
+	.download-div{
+		width: 400px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.download-the-app{
+		max-width: 100%;
+		height: auto;
+		text-align: center;
+	}
+	.download-app-p{
+		max-width: 100%;
+		text-align: center;
+		line-height: 1.3;
+	}
+	.app-store{
+		margin: 0 auto;
+	}
+}
 }
