--- a/homework5/main.css
+++ b/homework5/main.css
@@ -333,7 +333,7 @@ li{
 		margin: 0 auto;
 	}
 	.download-div{
-		width: 400px;
+		max-width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
