--- a/homework5/main.css
+++ b/homework5/main.css
@@ -30,7 +30,106 @@ li{
 .block{
 	margin: 0 auto;
 }
+.header{
+	height: 950px;
+	max-width: 100%;
+	background-image: url(img/rectangle.png);
+	background-repeat: no-repeat;
+	background-position: center;
 
+}
+.head{
+	width: 90%;
+	height: 45px;
+	display: flex;
+	margin: 0 auto;
+	padding-top: 41px;
+	//border: 1px solid white;
+	justify-content: space-between;
+}
+.logo {
+	margin-left: 200px;
+	width: 121px;
+	height: 45px;
+	overflow: hidden;
+	z-index: 2
+}
+.icon{
+	visibility: hidden;
+}
+.topnav-a{
+	width: 413px;
+    height: 16px;
+ 	font-family: Lato-Regular;
+  	font-size: 18px;
+  	text-decoration: none;
+  	color: #ffffff;
+  	padding: 13px 0px;
+  	padding-right: 64px;
+  	text-transform: uppercase;
+}
+nav{
+	z-index: 1
+}
+.heyu{
+	display: flex;
+	max-width: 1229px;
+	height: 821px;
+	justify-content: space-between;
+	margin: 0 auto;
+}
+.heyu-div{
+	height: 360px;
+	max-width: 560px;
+	margin-top: 210px;
+}
+.heyu-h1{
+	max-width: 450px;
+  	height: 142px;
+	font-size: 72px;
+ 	font-weight: 900;
+ 	font-family: Lato-Black;
+ 	color: #ffffff;
+ 	letter-spacing: 2.9px;
+}
+.heyu-p1{
+	font-size: 24px;
+	font-family: Lato-Regular;
+	line-height: 1.17;
+	color: #ffffff;
+	margin-top: 43px;
+}
+.hey{
+	font-weight: bold;
+}
+.heyu-button{
+	width: 224px;
+  	height: 50px;
+  	border-radius: 25px;
+  	background-color: #ffffff;
+  	font-size: 18px;
+  	border: none;
+  	font-family: Lato-Bold;
+ 	font-weight: bold;
+ 	margin-top: 101px;
+}
+.heyu-p2{
+	display: table;
+	font-size: 18px;
+  	font-weight: bold;
+  	background: linear-gradient(to top, #eb402c, #d90647), linear-gradient(to bottom, #363636, #363636);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	margin-left: 50px;
+	border: none;
+}
+.iPhone-7{
+  	width: 479px;
+  	height: 821px;
+  	background-size: contain;
+  	background-position: center;
+  	margin-top: 115px;
+}
 .messages{
 	height: 1500px;
 }
@@ -211,6 +310,56 @@ li{
 	body{
 		max-width: 100%;
 	}
+	.header{
+		width: 100%;
+	}
+	.head{
+		max-width: 100%;
+	}
+	nav{
+		display: none;
+	}
+	.iPhone-7{
+		visibility: hidden;
+	}
+	.heyu-div{
+		display: none;
+		max-width: 100%;
+		margin-top: 0px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		height: auto;
+	}
+	.heyu-h1{
+		max-width: 100%;
+		text-align: center;
+		height: auto;
+	}
+	.heyu-p1{
+		margin: 0 auto;
+		padding-top: 50px;
+		text-align: center;
+
+	}
+	.iphone{
+		display: none;
+	}
+	.logo{
+		margin: 0px;
+	}
+	.heyu{
+		max-width: 100%;
+		display: flex;
+		justify-content: center;
+	}
+	.iPhone-7{
+		display: none;
+	}
+	.heyu-button{
+		margin-top: 30px;
+	}
 	.messages{
 		width: 100%;
 		height: auto;
@@ -235,6 +384,10 @@ li{
 	}
 	.messages-img2{
 		display: none;
+	}
+	.messages-img3{
+		padding: 0px;
+		margin: 0px;
 	}
 	.messages-img{
 		max-width: 100%;
