--- a/homework4/main.css
+++ b/homework4/main.css
@@ -30,57 +30,62 @@ li{
 }
 .header{
 	height: 950px;
+	max-width: 100%;
 	background-image: url(img/rectangle.png);
 	background-repeat: no-repeat;
 	background-position: center;
+
 }
 .head{
-	padding-top: 41px;
+	width: 90%;
 	height: 45px;
-	width: 2000px;
 	display: flex;
 	margin: 0 auto;
+	padding-top: 41px;
+	//border: 1px solid white;
+	justify-content: space-between;
 }
-.logo{
+.logo {
+	margin-left: 200px;
 	width: 121px;
 	height: 45px;
-	margin-left: 200px;
+	overflow: hidden;
+	z-index: 2
 }
-.header-nav{
+.icon{
+	visibility: hidden;
+}
+.topnav-a{
 	width: 413px;
-	margin-left: 1066px;
-	margin-right: 199px;
-	align-items: center;
+    height: 16px;
+ 	font-family: Lato-Regular;
+  	font-size: 18px;
+  	text-decoration: none;
+  	color: #ffffff;
+  	padding: 13px 0px;
+  	padding-right: 64px;
+  	text-transform: uppercase;
 }
-.header-ul{ 
-	padding: 13px 0px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.header-a{
-	color: #ffffff;
-	font-size: 18px;
-	text-decoration: none;
-	font-family: Lato-Regular;
-}
-.header-a:hover{
+.topnav-a:hover{
 	text-decoration: line-through;
+}
+nav{
+	z-index: 1
 }
 .heyu{
 	display: flex;
-	width: 1229px;
+	max-width: 1229px;
 	height: 821px;
-	margin: 0 auto;
 	justify-content: space-between;
+	margin: 0 auto;
 }
 .heyu-div{
 	height: 360px;
-	width: 560px;
+	max-width: 560px;
 	margin-top: 210px;
 }
 .heyu-h1{
-	width: 450px;
+	max-width: 450px;
   	height: 142px;
 	font-size: 72px;
  	font-weight: 900;
@@ -130,7 +135,6 @@ li{
 	margin: 0 auto;
 }
 .messages{
-	max-width: 100%;
 	height: 1500px;
 }
 .messages_block{
@@ -202,7 +206,7 @@ li{
 	border-top: 1px solid #e0e0e0;
 }
 .reviews-block{
-	width: 1170px;
+	width: 1200px;
 	height: 490px;
 	margin: 0 auto;
 	margin-top: 95px;
@@ -217,7 +221,7 @@ li{
 }
 .reviews-div{
 	display: flex;
-	width: 1170px;
+	width: 1200px;
 	height: 274px;
 	margin-top: 98px;
 	justify-content: space-between;
@@ -279,14 +283,18 @@ li{
 }
 .people{
 	display: flex;
-	width: 1170px;
+	width: 1200px;
 	height: 62px;
 	justify-content: space-between;
 }
 .people-div{
 	display: flex;
 	width: 370px;
-	height: 62px;;
+	height: 62px;
+	margin-top: 60px;
+}
+.people-div-second{
+	margin-top: 91px;
 }
 .people-img{
 	background-size: cover;
@@ -426,34 +434,37 @@ li{
 	right: 297px;
 }
 .subscribe{
-	width: 100%;
 	height: 608px;
 }
 .subscribe-div{
-	width: 917px;
+	width: 1200px;
 	height: 608px;
-	margin: 0 auto;
 }
 .subscribe-h1{
 	width: 780px;
   	height: 47px;
+  	margin: 0 auto;
 	font-family: Lato-Black;
  	font-size: 60px;
   	font-weight: 900;
   	color: #363636;
-  	margin: 227px 0px 49px 60px;
+  	margin-top: 227px;
+  	
 }
 .subscribe-p{
 	width: 920px;
 	font-size: 18px;
 	font-family: Lato-Regular;
 	color: #808080;
+	margin: 0 auto;
 	margin-bottom: 70px;
+	margin-top: 60px;
 }
 .subscribe-block{
 	width: 571px;
 	height: 50px;
 	margin-left:155px;
+	margin: 0 auto;
 }
 .subscribe-button{
 	width: 180px;
@@ -480,7 +491,6 @@ li{
   	position: absolute;
 }
 .download{
-	width: 100%;
 	height: 698px;
 }
 .download_block{
