--- a/ToDo/src/app/app.component.css
+++ b/ToDo/src/app/app.component.css
@@ -5,17 +5,20 @@
 
 .wrapper {
   margin: 0 auto;
-  width: 600px;
+  width: 605px;
   height: auto;
 }
+
 .h1_todo{
   font-size: 50px;
   font-family: Laila-SemiBold, serif;
 }
+
 .p_todo{
   font-size: 20px;
   font-family: Laila-SemiBold, serif;
 }
+
 .add {
   width: 100px;
   height: 49px;
@@ -26,6 +29,7 @@
 
 .deleteAll {
   background-color: darkred;
+  margin-left: 5px;
 }
 
 .input {
@@ -33,7 +37,6 @@
   height: 44px;
   border: none;
   border-bottom: 1px solid black;
-
 }
 
 .one {
@@ -46,9 +49,9 @@
 .p_task {
   width: 400px;
   height: 45px;
-  border: 1px solid black;
   margin: 0;
   font-size: 25px;
+  padding-top: 10px;
 }
 
 .edit {
@@ -69,21 +72,20 @@
   border-radius: 10px;
   width: 50px;
   border: none;
+  margin-left: 5px;
 }
 
 .check {
   width: 50px;
   height: 48px;
-  margin-top: 0px;
-  border-radius: 20px;
-  background-color: transparent;
-
+  margin-top: 0;
+  background-color: white;
 }
 
 label {
   width: 50px;
   height: 48px;
-  margin-top: 0px;
+  margin-top: 0;
   border-radius: 20px;
-  background-color: transparent;
+  margin-right: 10px;
 }
