--- a/ToDo/src/app/app.component.html
+++ b/ToDo/src/app/app.component.html
@@ -13,7 +13,7 @@
       <input type="checkbox" class="check">
     </label>
     <p class="p_task">{{task}}</p>
-    <input id="editInp" type="text" class="editInput" matInput>
+    <input id="editInp" type="text" class="editInput" [(ngModel)]="task">
     <button class="edit" (click)="focusInput()"></button>
     <button class="delete" (click)="deleteTask(i)"></button>
   </div>
