--- a/ToDo/src/app/app.component.css
+++ b/ToDo/src/app/app.component.css
@@ -9,12 +9,12 @@
   height: auto;
 }
 
-.h1_todo {
+.h1_todo{
   font-size: 50px;
   font-family: Laila-SemiBold, serif;
 }
 
-.p_todo {
+.p_todo{
   font-size: 20px;
   font-family: Laila-SemiBold, serif;
 }
@@ -40,7 +40,7 @@
 }
 
 .one {
-  width: 700px;
+  width: 900px;
   height: 49px;
   display: flex;
   margin-top: 10px;
@@ -52,6 +52,16 @@
   margin: 0;
   font-size: 25px;
   padding-top: 10px;
+  font-family: Laila-SemiBold, serif;
+}
+
+.Edit_your_task {
+  width: 200px;
+  height: 45px;
+  margin: 0;
+  font-size: 25px;
+  padding-top: 10px;
+  font-family: Laila-SemiBold, serif;
 }
 
 .edit {
@@ -62,6 +72,7 @@
   border-radius: 10px;
   width: 50px;
   border: none;
+  margin-left: 5px;
 }
 
 .delete {
@@ -89,9 +100,8 @@ label {
   border-radius: 20px;
   margin-right: 10px;
 }
-
-.editInput {
-  border: none;
+.editInput{
   width: 200px;
   font-size: 25px;
+  font-family: Laila-SemiBold, serif;
 }
