--- a/ToDo/src/app/app.component.html
+++ b/ToDo/src/app/app.component.html
@@ -1,22 +1,10 @@
-<div class="wrapper">
-  <h1 class="h1_todo">ToDo List</h1>
-  <ng-container>
-    <p class="p_todo">Quantity tasks:<span *ngIf="tasks.length > 0">{{tasks.length}}</span></p>
-  </ng-container>
-  <form [formGroup]="form" (submit)="submitForm()">
-    <input class="input" placeholder="Your task..." formControlName="task">
-    <button class="add">Add</button>
-    <button class="add deleteAll" (click)="deleteTaskAll()">Delete All</button>
-  </form>
-  <div *ngFor="let task of tasks; let i = index" class="one">
-    <label>
-      <input type="checkbox" class="check">
-    </label>
-    <p class="p_task">{{task}}</p>
-    <p class="Edit_your_task" *ngIf="show">Edit your task:</p>
-    <input #editInp type="text" class="editInput" [(ngModel)]="task" *ngIf="show">
-    <button class="edit" (click)="focusInput()"></button>
-    <button class="delete" (click)="deleteTask(i)"></button>
-  </div>
+<div>
+  <nav>
+    <a routerLink="">To do list</a>
+  </nav>
+  <router-outlet></router-outlet>
+</div>
+<div class="block">
+
 </div>
 
