--- a/ToDo/src/app/all-tasks/all-tasks.component.html
+++ b/ToDo/src/app/all-tasks/all-tasks.component.html
@@ -5,7 +5,7 @@
   </ng-container>
   <form>
     <input type="text" class="input" placeholder="Your task..." #newTask>
-    <button class="add" (click)="addTask(newTask.value)">Add</button>
+    <button class="add" (click)="addTask(newTask.value)" type="reset">Add</button>
     <button class="add deleteAll" (click)="deleteTaskAll()">Delete All</button>
   </form>
   <ul *ngFor="let task of tasks; let i = index" class="one">
