--- a/ToDo/src/app/all-tasks/all-tasks.component.html
+++ b/ToDo/src/app/all-tasks/all-tasks.component.html
@@ -6,7 +6,7 @@
   <form>
     <input type="text" class="input" placeholder="Your task..." #newTask>
     <button class="add" (click)="addTask(newTask.value)" type="reset">Add</button>
-    <button class="add deleteAll" (click)="deleteTaskAll()">Delete All</button>
+    <button class="add deleteAll" (click)="deleteTaskAll()" type="button">Delete All</button>
   </form>
   <ul *ngFor="let task of tasks; let i = index" class="one">
     <li class="p_task" [class.complete] = 'task.complete'>
